rancher/config/rancher-virtualservice-azure.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rancher-vs
  namespace: cattle-system ## Virtualservice will be deployed in the same namespace as rancher
spec:
  hosts:
  - "rancher.infologistix-cnc.ddnss.org" ## domain name of rancher
  gateways:
  - istio-system/istio-ingress-gateway ## Name of istio-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: rancher ## url of service of rancher
        port:
          number: 80
