rancher/config/rancher-virtualservice-local.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rancher-vs
  namespace: cattle-system
spec:
  hosts:
  - "rancher.localhost"
  gateways:
  - istio-system/istio-ingress-gateway ## Name of istio-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: rancher
        port:
          number: 80
